# beholder

./: .gitignore  .golangci.yml  CMakeLists.txt  Makefile  README.md  go.mod  go.sum  main.go
_c-api/: CMakeLists.txt  CMakePresets.json
_c-api/cmake/: Packaging.cmake
_c-api/src/: CMakeLists.txt
_c-api/src/beholder/: Beholder.h  CMakeLists.txt
_c-api/src/beholder/camera/: CMakeLists.txt  Camera.h  TransportLayer.cpp  TransportLayer.h
_c-api/src/beholder/camera/cmake/: Config.cmake.in  beholder_camera.pc.in
_c-api/src/beholder/camera/internal/: DefaultConfigurator.h  GenAPIUtils.h
_c-api/src/beholder/capi/: Result.cpp
_c-api/src/beholder/cmake/: Config.cmake.in
_c-api/src/beholder/image/: CMakeLists.txt  ConversionInfo.h  Processor.cpp  Processor.h
_c-api/src/beholder/image/ops/: AdaptiveThreshold.cpp  AddPadding.cpp  (+24 more)
_c-api/src/beholder/neural/: BeholderNeural.h
_c-api/src/beholder/util/: BeholderUtil.h  Constants.h  Packs.h
_c-api/test/: CMakeLists.txt
_c-api/test/beholder/: CMakeLists.txt  Testing.h  camera.test.cpp  neural.test.cpp
_c-api/test/src/: Test.h  test_camera_dump_params.cpp  test_camera_emugige.cpp  test_dnn_east.cpp  test_dnn_yolov8.cpp
c-deps/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
c-deps/scripts/: bh_third_party_image.sh
c-deps/src/: CMakeLists.txt  Traits.h  Utility.h  libbeholder.h.in
c-deps/src/beholder/: Beholder.h  BeholderExport.h  CMakeLists.txt
c-deps/src/beholder/camera/: BeholderCamera.h  Camera.cpp  Camera.h  Exception.h  ParamEntry.cpp  ParamEntry.h  PylonAPI.cpp  PylonAPI.h  TransportLayer.cpp  TransportLayer.h
c-deps/src/beholder/capi/: BeholderCAPI.h  CMakeLists.txt  CWrapperBase.h  Image.h  RawImage.h  Rectangle.h  Result.cpp  Result.h  Wrapper.h
c-deps/src/beholder/cmake/: beholder.pc.in
c-deps/src/beholder/image/: BeholderImage.h  CMakeLists.txt  ConversionInfo.cpp  ConversionInfo.h  ProcessingOp.cpp  ProcessingOp.h  Processor.cpp  Processor.h
c-deps/src/beholder/neural/: BeholderNeural.h  CMakeLists.txt  CRAFTDetector.cpp  CRAFTDetector.h  EASTDetector.cpp  EASTDetector.h  ObjDetector.cpp  ObjDetector.h  PARSeqDetector.cpp  PARSeqDetector.h  Tesseract.cpp  Tesseract.h  YOLOv8Detector.cpp  YOLOv8Detector.h
c-deps/src/beholder/util/: BeholderUtil.h  CMakeLists.txt  Constants.h  Enums.h  Packs.h  Traits.h  Utility.cpp  Utility.h
c-deps/src/beholder_camera/: BeholderCameraExport.h  CMakeLists.txt  Camera.cpp  Camera.h  Exception.h  ParamEntry.cpp  ParamEntry.h  PylonAPI.cpp  PylonAPI.h  TransportLayer.cpp  TransportLayer.h
c-deps/src/beholder_camera/internal/: CMakeLists.txt  DefaultConfigurator.cpp  GenAPIUtils.cpp  GenAPIUtils.h
c-deps/src/camera/: Camera.h  DefaultConfigurator.h  ParamEntry.cpp
c-deps/src/capi/: CWrapperBase.h  Rectangle.h  Result.h
c-deps/src/image/: ConversionInfo.cpp  Processor.h
c-deps/src/image/ops/: AddPadding.cpp  AddPadding.h  CLAHE.h  CorrectGamma.cpp  Crop.cpp  Deblur.cpp  Deblur.h  DivGaussianBlur.cpp  DrawBoundingBoxes.cpp  DrawBoundingBoxes.h  DrawLabels.cpp  EqualizeHistogram.cpp  EqualizeHistogram.h  GaussianBlur.h  Grayscale.cpp  Invert.h  Landscape.h  MedianBlur.cpp  MedianBlur.h  Morphology.cpp  NormalizeBrightnessContrast.h  Ops.h  ProcessingOp.h  Rescale.cpp  Rescale.h  Resize.h  ResizeToHeight.h  Rotate.cpp  Rotate.h  Threshold.cpp  UnsharpMask.cpp  UnsharpMask.h
c-deps/src/nn/: CRAFTDetector.h  EASTDetector.h  ObjDetector.h  PARSeqDetector.cpp  PARSeqDetector.h  YOLOv8Detector.h
c-deps/src/nn/internal/: ObjDetectorBuffers.h
c-deps/test/: CMakeLists.txt
c-deps/test/beholder/: CMakeLists.txt  Testing.cpp  Testing.h  camera.test.cpp  image.test.cpp  neural.test.cpp
c-deps/test/beholder/camera/: CMakeLists.txt  camera.test.cpp
c-deps/test/beholder_camera/: CMakeLists.txt
c-deps/test/src/: CMakeLists.txt  TestCamera.h  test_camera_sw_trigger.cpp  test_dnn_craft.cpp  test_dnn_parseq.cpp  test_video_to_frames.cpp
internal/_libbeholder/: CMakeLists.txt  beholder.pc.in  beholder_camera.pc.in
internal/_libbeholder/src/: RawImage.h  Rectangle.h  Traits.h  Utility.cpp  Utility.h  libbeholder.h  libbeholder_camera.h.in
internal/_libbeholder/src/camera/: Camera.cpp  Camera.h  DefaultConfigurator.cpp  Image.cpp  Image.h  TransportLayer.cpp  TransportLayer.h
internal/_libbeholder/src/capi/: RawImage.h  Rectangle.h  Result.cpp  Result.h
internal/_libbeholder/src/image/: ConversionInfo.cpp  ConversionInfo.h  ImageProcessor.cpp  ImageProcessor.h  Processor.cpp  Processor.h  Result.h
internal/_libbeholder/src/nn/: CRAFTDetector.cpp  CRAFTDetector.h  DBDetector.cpp  DBDetector.h  Detector.cpp  EASTDetector.cpp  EASTDetector.h  ObjDetector.cpp  ObjDetector.h  Tesseract.cpp  Tesseract.h  YOLOv8Detector.cpp  YOLOv8Detector.h
internal/_libbeholder/src/ocr/: Detector.cpp  Detector.h  EASTDetector.cpp  OcrResults.h  Tesseract.cpp  Tesseract.h
internal/_libbeholder/test/src/: CMakeLists.txt  Test.h  test_camera_camemu.cpp  test_camera_dump_params.cpp  test_camera_emugige.cpp  test_camera_gige.cpp  test_camera_hw_trigger.cpp  test_camera_sw_trigger.cpp  test_demo.cpp  test_dnn_craft.cpp  test_dnn_east.cpp  test_dnn_obj_detect.cpp  test_dnn_text_detect.cpp  test_dnn_yolov8.cpp  test_ocr_dukat.cpp  test_ocr_neograf.cpp  test_video_to_frames.cpp
internal/camera/_libcamera/: CMakeLists.txt
internal/camera/_libcamera/src/: Camera.cpp  Camera.h  DefaultConfigurator.cpp  DefaultConfigurator.h  Exception.h  Image.cpp  Image.h  ParamEntry.cpp  ParamEntry.h  Params.cpp  Params.h  PylonAPI.h  TransportLayer.cpp  TransportLayer.h  Utility.cpp  Utility.h  libcamera.h
internal/ocr/_libocr/: CMakeLists.txt
internal/ocr/_libocr/src/: ImageProcessor.cpp  ImageProcessor.h  OcrResults.h  Rectangle.h  Tesseract.cpp  Tesseract.h  Utility.cpp  libocr.h
src/: CMakeLists.txt  Config.cpp  Config.h  General.h  ImageProcessor.cpp  ImageProcessor.h  Main.cpp  Main.h  Ocr.cpp  Ocr.h  Postprocess.cpp  Postprocess.h  Preprocess.cpp  Preprocess.h  Tesseract.cpp  Tesseract.h  TimeAnalyzer.h  Timer.cpp  Timer.h  Utility.cpp  Utility.h
(+344 files in other folders)
